--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.9",
     "cordova-android": "^12.0.1",
     "cordova-browser": "^7.0.0"
   },
@@ -20,9 +22,14 @@
     "platforms": [
       "android",
       "browser"
-    ]
+    ],
+    "plugins": {
+      "cordova-plugin-geolocation": {}
+    }
   },
   "dependencies": {
+    "moment": "^2.30.1",
+    "mysql2": "^3.9.7",
     "onsenui": "^2.12.8"
   }
 }
