chore: Update package.json and index.html for TaskYa app

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "io.cordova.hellocordova",
-  "displayName": "HelloCordova",
+  "name": "io.cordova.taskya",
+  "displayName": "TaskYa",
   "version": "1.0.0",
-  "description": "A sample Apache Cordova application that responds to the deviceready event.",
+  "description": "Una aplicación para gestionar tareas y recordatorios",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
