--- a/package.json
+++ b/package.json
@@ -14,14 +14,22 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^12.0.1",
-    "cordova-browser": "^7.0.0"
+    "cordova-browser": "^7.0.0",
+    "cordova-plugin-file": "^8.0.1",
+    "cordova-plugin-geolocation": "^5.0.0",
+    "cordova-sqlite-storage": "^6.1.0"
   },
   "cordova": {
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ],
     "plugins": {
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {
+        "GPS_REQUIRED": "true"
+      },
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-file": {}
     }
   },
   "dependencies": {
